fixed background color not going to end of page

--- a/skeleton_side_menu.html
+++ b/skeleton_side_menu.html
@@ -33,7 +33,7 @@
             <a href="#">Clients</a>
             <a href="#">Contact</a>
         </div>
-        <div class="">
+        <div class="navbar-container">
             <div class="container">
                 <div class="row">
                     <nav class="navbar">
@@ -80,11 +80,11 @@
         <!--STATIC FOOTER START-->
             <div class='footer'>
                 <div class='container footer-container'>
-                    <!--<div class="row">-->
+                   
                         <div class='sm-twelve u-pull-right footer-text'>
                             <p>&copy; 2017 -mlnorman </p>
                         </div>
-                    <!--</div>-->
+                    
                 </div>
             </div>
         <!--STATIC FOOTER END-->
