--- a/skeleton_side_menu.html
+++ b/skeleton_side_menu.html
@@ -37,7 +37,7 @@
             <div class="container">
                 <div class="row">
                     <nav class="navbar">
-                        <a href="#" class="xs-nine sm-five md-four lg-three columns menu-button menu-button-link u-pull-left"><h3 class="title"><strong>ImgChest</strong></h3></a>
+                        <a href="#" class="xs-nine sm-five md-four lg-three columns menu-button menu-button-link u-pull-left"><h3 class="title"><strong>AppName</strong></h3></a>
                         <a href="#" class="button xs-eleven xs-offset-by-four sm-three md-two md-offset-by-three lg-two lg-offset-by-four one-quarter columns menu-button top-menu-hidden">Login</a>
                         <a href="#" class="button xs-eleven sm-three md-two lg-two one-quarter columns menu-button top-menu-hidden">Register</a>
                         <span class="u-pull-right xs-two side-menu-hidden" style="font-size:30px;cursor:pointer; margin-right: 20px;" onclick="openNav()">&#9776;</span>
@@ -52,8 +52,8 @@
             <div class="container">
                 <div class="row">
                     <div class="xs-twelve sm-twelve md-eight md-offset-by-two lg-eight lg-offset-by-two columns">
-                        <h4 class=""><strong>Welcome to ImgChest!</strong></h4>
-                        <h6>Feel free to create an account if you would like to track your uploaded images or upload anonymously to get a sharable link.</h6>
+                        <h4 class=""><strong>Welcome to Blank</strong></h4>
+                        <h6>Put some random text here if so people can see the mediocre layout.</h6>
                     </div>
                     <hr class="u-full-width">
                 </div>
@@ -61,7 +61,7 @@
             <div class="container">
                 <div class="md-eight md-offset-by-two lg-eight lg-offset-by-two columns">
                     <div class="row">
-                        <h6><strong>Upload your image below</strong></h6>
+                        <h6><strong>UPLOAD A FILE HERE!</strong></h6>
                         <form>
                             <div class="box">
                                 <div class="md-four md-offset-by-four lg-two lg-offset-by-four">
@@ -82,7 +82,7 @@
                 <div class='container footer-container'>
                    
                         <div class='sm-twelve u-pull-right footer-text'>
-                            <p>&copy; 2017 -mlnorman </p>
+                            <p>&copy; 2017 - mlnorman </p>
                         </div>
                     
                 </div>
